--- a/trunk/doc/man/man8/slurmd.8
+++ b/trunk/doc/man/man8/slurmd.8
@@ -4,9 +4,9 @@ slurmd \- The compute node daemon of Slurm.
 .SH "SYNOPSIS"
 \fBslurmd\fR [\fIOPTIONS\fR...]
 .SH "DESCRIPTION"
-\fBslurmld\fR is the compute node daemon of Slurm. It monitors all tasks running
-on the compute node , accepts work (tasks), launched tasks, and kill running tasks 
-upon request.
+\fBslurmld\fR is the compute node daemon of Slurm. It monitors all tasks 
+running on the compute node , accepts work (tasks), launches tasks, and kills 
+running tasks upon request.
 .TP
 OPTIONS
 .TP
@@ -14,53 +14,21 @@ OPTIONS
 Clear system locks as needed. This may be required if \fBslurmd\fR terminated 
 abnormally.
 .TP
-\fB-d\fR
-Execute \fBslurmctld\fR as a daemon (in the background) with logging to syslog.
+\fB-D\fR
+Run slurmd in the foreground. Error and debug messages will be copied to stderr.
 .TP
-\fB-e <errlev>\fR
-Set stderr logging to the specified level..TP
+\fB-v\fR
+Verbose operation. Multiple -v's increase verbosity.
+.TP
 \fB-h\fR
 Help; print a brief summary of command options.
 .TP
 \fB-f <file>\fR
 Read configuration from the specified file.
 .TP
-\fB-l <errlev>\fR
-Set logfile logging to the specified level.
-.TP
 \fB-L <file>\fR
 Write log messages to the specified file.
 .TP
-\fB-s <errlev>\fR
-Set syslog logging to the specified level.
-.TP
-ARGUMENTS
-.TP
-\fIerrlev\fP
-The level of error to be reported, an integer value between 0 and 7. 
-Larger numbers result in more logging information. The numbers represent 
-the following levels of logging:
-.br
-\fB0\fR
-No logging of any events
-.br
-\fB1\fR
-Log fatal errors only
-.br
-\fB2\fR
-Log all errors
-.br
-\fB3\fR
-Log informational messages
-.br
-\fB4\fR
-Verbose logging of informational message
-.br
-\fB5,6,7\fR
-Log highly detailed debugging messages
-.TP
-\fB<file>\fR
-Pathname of a configuration or log file to use.
 .SH "NOTES"
 It may be useful to experiment with different \fBslurmd\fR specific 
 configuration parameters using a distinct configuration file. However, 
