--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -119,8 +119,15 @@ upon registration. The default value is 0, which
 means that a node will remain DOWN until a system administrator explicitly 
 makes it available for use.
 .TP
+\fBSlurmUser\fR
+The name of the user that the \fBslurmctld\fR daemon executes as. For security 
+purposes a user other than "root" may be used. 
+.TP
 \fBSlurmctldLogFile\fR
 Fully qualified pathname of a file into which the \fBslurmctld\fR daemon's  logs are written.
+.TP
+\fBSlurmctldPidFile\fR
+Fully qualified pathname of a file into which the  \fBslurmctld\fR daemon may write its process id. This may be used for automated signal processing.
 .TP
 \fBSlurmctldPort\fR
 The port number that the SLURM controller, \fBslurmctld\fR, listens 
@@ -133,7 +140,11 @@ primary controller to respond before assuming control. The default value
 is 300 seconds.
 .TP
 \fBSlurmdLogFile\fR
-Fully qualified pathname of a file into whichthe  \fBslurmd\fR daemon's logs are written.
+Fully qualified pathname of a file into which the  \fBslurmd\fR daemon's logs are written.
+.TP
+\fBSlurmdPidFile\fR
+Fully qualified pathname of a file into which the  \fBslurmd\fR daemon may write 
+its process id. This may be used for automated signal processing.
 .TP
 \fBSlurmdPort\fR
 The port number that the SLURM compute node daemon, \fBslurmd\fR, listens 
