--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -151,6 +151,12 @@ with "#!" followed by the fully qualified pathname of a valid shell.
 verbose operation. Multiple \fB-v\fR's will further increase the verbosity of
 .B srun.
 .TP
+\fB\-W\fR, \fB\-\-wait\fR=\fIseconds\fR
+Specify how long to wait after the first task terminates before terminating 
+all remaining tasks. The default value is unlimited. This can be useful to 
+insure that a a job is terminated in a timely fashion in the event that one 
+or more tasks terminate prematurely.
+.TP
 \fB\-d\fR, \fB\-\-debug\fR
 enable debug output. Multiple \fB-d\fR's increase the debug level of
 .B srun
