--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -356,32 +356,35 @@ options may be set via environment variables. These environment
 variables, along with their corresponding options, are listed below.
 (Note: commandline options will always override these settings)
 .TP 20
-SLURM_NPROCS
-\fB\-n, \-\-nprocs\fR=\fIn\fR
-.TP
 SLURM_CPUS_PER_TASK
 \fB\-c, \-\-ncpus\-per\-task\fR=\fIn\fR
 .TP
-SLURM_NNODES
-\fB\-N, \-\-nodes\fR=\fIn\fR
-.TP
-SLURM_PARTITION
-\fB\-p, --partition\fR=\fIpartition\fR
-.TP
-SLURM_STDOUTMODE
-\fB\-o, \-\-output\fR=\fImode\fR
-.TP
-SLURM_STDINMODE
-\fB\-i, \-\-input\fR=\fImode\fR
-.TP
-SLURM_STDERRMODE
-\fB\-e, \-\-error\fR=\fImode\fR
+SLURM_DEBUG
+\fB\-d, \-\-debug\fR
 .TP
 SLURM_DISTRIBUTION
 \fB\-m, \-\-distribution\fR=(\fIblock|cyclic\fR)
 .TP
-SLURM_DEBUG
-\fB\-d, \-\-debug\fR
+SLURM_NNODES
+\fB\-N, \-\-nodes\fR=\fIn\fR
+.TP
+SLURM_NPROCS
+\fB\-n, \-\-nprocs\fR=\fIn\fR
+.TP
+SLURM_PARTITION
+\fB\-p, --partition\fR=\fIpartition\fR
+.TP
+SLURM_STDERRMODE
+\fB\-e, \-\-error\fR=\fImode\fR
+.TP
+SLURM_STDINMODE
+\fB\-i, \-\-input\fR=\fImode\fR
+.TP
+SLURM_STDOUTMODE
+\fB\-o, \-\-output\fR=\fImode\fR
+.TP
+SLURM_WAIT
+\fB\-W, \-\-wait\fR=\fIseconds\fR
 .PP
 Additionally,
 .B srun
