--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -1,4 +1,4 @@
-.TH SINFO "1" "October 2002" "sinfo 0.1" "Slurm components"
+.TH SINFO "1" "November 2002" "sinfo 0.1" "Slurm components"
 
 .SH "NAME"
 sinfo \- Used to view information of jobs located in the scheduling queue.
@@ -11,33 +11,36 @@ system running SLURM.
 
 .SH "OPTIONS"
 .TP
-\fB-?\fR, \fB--help\fR
+\fB\-?\fR, \fB\-\-help\fR
 Print a help message describing the usage of \fBsinfo\fR.
 .TP
-\fB-i <time>\fR , \fB--iterate <time>\fR
+\fB\-\-exact\fR
+If set, to not group node information on a single node unless their configurations are identical. By default cpu count, memory size, and disk space will be listed as a range for nodes with the same partition and state.
+.TP
+\fB\-i <time>\fR , \fB\-\-iterate <time>\fR
 Print the state on a periodic basis.
 .TP
-\fB-l\fR , \fB--long\fR
+\fB\-l\fR , \fB\-\-long\fR
 List more detailed information than normally provided.
 .TP
-\fB-n <node>\fR , \fB--node <node>\fR
+\fB\-n <node>\fR , \fB\-\-node <node>\fR
 List information on the specified node(s).
 .TP
-\fB-t <state>\fR , \fB--state <state>\fR
+\fB\-t <state>\fR , \fB\-\-state <state>\fR
 List nodes of a given state.
 .TP
-\fB--summarize\fR
+\fB\-\-summarize\fR
 List only a partition state summary. Do not show individual nodes.
 .TP
-\fB-p <partition>\fR, \fB--partition <partition>\fR
+\fB\-p <partition>\fR, \fB\-\-partition <partition>\fR
 Display information about the specified partition.  If \fB-p\fR is used with a
 \fB-n\fR with no arguments, all the nodes of the specified partition will be
 displayed.
 .TP
-\fB--usage\fR
+\fB\-\-usage\fR
 Dipaly brief description of commands and options.
 .TP
-\fB-v\fR , \fB--verbose\fR
+\fB\-v\fR , \fB\-\-verbose\fR
 Provide detailed event logging through program execution.
 .SH "ARGUMENTS"
 .TP
