Minor correction for exact option.

--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -14,7 +14,7 @@ system running SLURM.
 \fB\-?\fR, \fB\-\-help\fR
 Print a help message describing the usage of \fBsinfo\fR.
 .TP
-\fB\-\-exact\fR
+\fB\-e\fR, \fB\-\-exact\fR
 If set, to not group node information on a single node unless their configurations are identical. By default cpu count, memory size, and disk space will be listed as a range for nodes with the same partition and state.
 .TP
 \fB\-i <time>\fR , \fB\-\-iterate <time>\fR
