--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -74,9 +74,10 @@ initiation and higher system utilization, but lower application performance.
 \fB\-O\fR, \fB\-\-overcommit\fR
 overcommit resources. Normally,
 .B srun
-will not allocate more than one process to a cpu. By specifying
+will not allocate more than one process per cpu. By specifying
 \fB\-\-overcommit\fR you are explicitly allowing more than one process
-per cpu.
+per cpu. However no more than \fMAX_TASKS_PER_NODE\fR tasks are 
+permitted to execute per node.
 .TP
 \fB\-T\fR, \fB\-\-threads\fR=\fInthreads\fR
 Request that 
