Correct cluster size vs slurmctld size example.

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -60,7 +60,7 @@ Users select the supported interconnects at compile time via GNU autoconf.
 \item {\em Scalability}: SLURM is designed for scalability to clusters of
 thousands of nodes.
 Prototypes of SLURM components thus far developed indicate that the
-controller for a cluster with 16k nodes will occupy on the order of 2 MB 
+controller for a cluster with 1000 nodes will occupy on the order of 2 MB 
 of memory and performance will be excellent. 
 
 \item {\em Fault tolerance}: SLURM can handle a variety of failure modes
