--- a/trunk/doc/man/man3/slurm_allocate_resources.3
+++ b/trunk/doc/man/man3/slurm_allocate_resources.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "November 2002" "Morris Jette" "Slurm job initiation functions"
+.TH "Slurm API" "3" "December 2002" "Morris Jette" "Slurm job initiation functions"
 .SH "NAME"
 slurm_allocate_resources, slurm_allocate_resources_and_run,
 slurm_confirm_allocation, 
@@ -14,9 +14,7 @@ int \fBslurm_allocate_resources\fR (
 .br 
 	job_desc_msg_t *\fIjob_desc_msg_ptr\fP,
 .br 
-	resource_allocation_response_msg_t **\fIslurm_alloc_msg_pptr\fP, 
-.br
-	int \fIimmediate\fP
+	resource_allocation_response_msg_t **\fIslurm_alloc_msg_pptr\fP
 .br 
 );
 .LP 
@@ -78,10 +76,6 @@ int \fBslurm_submit_batch_job\fR (
 .SH "ARGUMENTS"
 .LP 
 .TP 
-\fIimmediate\fP
-If set do not queue the job; return the an error code or the results of a successful 
-allocation immediately; do not queue the request.
-.TP 
 \fIjob_desc_msg_ptr\fP
 Specifies the pointer to a job request specification. See slurm.h for full details 
 on the data structure's contents. 
@@ -123,9 +117,7 @@ job entry is created. Always release the response message when no longer require
 the function \fBslurm_free_resource_allocation_response_msg\fR.
 .LP 
 \fBslurm_allocate_resources_and_run\fR Request a resource allocation for a job 
-including the initiation of a job step to span the full allocation. If successful, 
-job and job step records are created. Always release the response message when no 
-longer required using the function \fBslurm_free_resource_allocation_and_run_response_msg\fR.
+including the initiation of a job step to span the full allocation. If resources are not available to initiate the job immediately, the request will fail (the immediate flag in the job descriptor is implicitly set). Always release the response message when no longer required using the function \fBslurm_free_resource_allocation_and_run_response_msg\fR.
 The list of host names returned may be matched to their data in the proper order by 
 using the functions \fBhostlist_create\fR, \fBhostlist_shift\fR, and 
 \fBhostlist_destroy\fR.
@@ -233,13 +225,12 @@ int main (int argc, char *argv[])
 .br 
 	if (slurm_allocate_resources(&job_desc_msg,
 .br
-	                             &slurm_alloc_msg_ptr,
-.br
-	                             true)) {
+	                             &slurm_alloc_msg_ptr)) {
 .br
 		slurm_perror ("slurm_allocate_resources error");
 .br 
 		exit (1);
+.br
 	}
 .br 
 	printf ("Allocated nodes %s to job_id %u\n", 
@@ -262,7 +253,9 @@ int main (int argc, char *argv[])
 .br
 	        slurm_alloc_msg_ptr->job_id );
 .br 
-	slurm_free_resource_allocation_response_msg (slurm_alloc_msg_ptr);
+	slurm_free_resource_allocation_response_msg(
+.br
+			slurm_alloc_msg_ptr);
 .br 
 	exit (0);
 .br 
