--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -115,7 +115,7 @@
 
 \put(300,545)
 {
-  \makebox(0,0)[l]{\large{UCRL-MA-147996-REV 1}}
+  \makebox(0,0)[l]{\large \shortstack[l]{ UCRL-MA-147996 \\ REV 1}}
 }
 
 \put(60, 460)
