Added data to build time plot

--- a/trunk/doc/figures/README
+++ b/trunk/doc/figures/README
@@ -1,2 +1,3 @@
 Most of these diagrams (with the ".dia" suffix) were built using the tool "dia".
 arch.obj was built using the tool "tgif".
+gnuplot is used with times.gpl and *.dat to build a timing plot
