Revision UCRL revision number.

--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -3,7 +3,7 @@
 \usepackage{epsfig}
 \usepackage{hhline}
 
-\author{Moe Jette, Mark Grondona\\
+\author{Moe Jette and Mark Grondona\\
  	\{jette,mgrondona\}@llnl.gov} 
 \title{SLURM: Simple Linux Utility for Resource Management}
 
@@ -115,7 +115,7 @@
 
 \put(300,545)
 {
-  \makebox(0,0)[l]{\large \shortstack[l]{ UCRL-MA-147996 \\ REV 1}}
+  \makebox(0,0)[l]{\large \shortstack[l]{ UCRL-MA-147996 \\ REV 2}}
 }
 
 \put(60, 460)
